# Rapid-Assignment

./: .env  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  run_tests.py  run_tests.sh
backend/: .coverage  .env  README.md  alembic.ini  env.example  init.sql  pyproject.toml  requirements-alt.txt  requirements.txt  setup.bat  setup.sh  setup_env.py  test.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/routes/: auth.py  dashboard.py  image.py  search.py
backend/tests/: conftest.py
backend/tests/e2e/: test_api_workflows.py
backend/tests/integration/: test_auth_flow.py  test_mcp_integration.py
backend/tests/unit/: test_models.py  test_schemas.py  test_security.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Navbar.jsx  Navigation.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  ImageGen.jsx  Landing.jsx  Login.jsx  Register.jsx  Search.jsx
frontend/src/services/: api.js
